# bpwave

./: .flake8  .gitignore  CHANGELOG.rst  LICENSE.txt  README.rst  pyproject.toml
bpwave/: __init__.py  _version.py  io.py  signal.py  visu.py
docs/source/: conf.py  index.rst
docs/source/parts/: io.rst  signal.rst
examples/: signal.ipynb
tests/: conftest.py  test_chpoints.py  test_cpindices.py  test_io.py  test_signal.py  test_signal_slicing.py  utils.py
tests/data/: physionet_aac_0027_10000.README.txt  physionet_aac_0027_10000_dicr_notch.csv  physionet_aac_0027_10000_dicr_peak.csv  physionet_aac_0027_10000_onset.csv  physionet_aac_0027_10000_refl_peak.csv  physionet_aac_0027_10000_sys_peak.csv  physionet_aac_0027_10000_y.csv  timestamped_dt_noheader.csv  timestamped_float_comments.csv
